# twitch-bot

./: .env.example  .gitignore  404.html  LICENSE  README.md  config_example.ini  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: docs.yml
.github/workflows/: docs.yml
bot/: __main__.py  bot.py  config.py  suppress.py
bot/commands/: hello.py
bot/utils/: config.py
docs/: index.md  requirements.md
requirements/: index.html
search/: search_index.json
