[tool.poetry]
name = "twitch-bot"
version = "1.0.0"
description = "My Twitch channel bot"
authors = ["Amanda Martins Xavier"]
license = "MIT"
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "^2.6.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.bot:run"

[tool.isort]
profile = "black"
line_length = "79"

[tool.taskipy.tasks]
lint = "blue . && isort ."
