[tool.poetry]
name = "twitch-bot"
version = "1.0.0"
description = "A simple Twitch channel bot created on my live streamings for helping and interacting with my viewers/chat."
homepage = "https://twitch.tv/amandamartinsdev"
repository = "https://github.com/amandamartinsdev/twitch-bot"
documentation = "https://amandamartinsdev.github.io/twitch-bot/"
authors = ["Amanda Martins Xavier <hi@amandamartins.dev>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "^2.6.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
termynal = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.bot:run"

[tool.isort]
profile = "black"
line_length = "79"

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
